# stochastic-connectivity-synthetic-artifact

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
configs/: smoke_synthetic.yaml  stochastic_connectivity_synthetic.yaml
docs/: EXPERIMENTS.md  REPRODUCIBILITY.md  RESULTS.md
outputs/: manifest.yaml  raw_results.csv  report.md  scale_sanity.csv  table2_snippets.md  table2_summary.csv
scripts/: run_all.ps1  run_all.sh  verify_outputs.py
src/stochconn/: __init__.py  boundary.py  cli.py  estimators.py  experiments.py  families.py  model.py  plot.py  report.py
stochconn/: __init__.py
tests/: test_properties.py
