[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-connectivity-synthetic-artifact"
version = "0.2.0"
description = "Standalone synthetic experiments for stochastic connectivity"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3",
  "PyYAML>=6",
]

[project.scripts]
stochconn = "stochconn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
